# cfg-noodle

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  REQUIREMENTS.md
.github/workflows/: build.yml  build_demo.yml  miri.yml
crates/cfg-noodle/: Cargo.toml  clippy.toml
crates/cfg-noodle/src/: data_portability.rs  error.rs  flash.rs  lib.rs  loom.rs  safety_guide.rs  storage_list.rs  storage_node.rs  sync.rs  test_utils.rs  worker_task.rs
crates/cfg-noodle/tests/: first_read_fails.rs  gc_handles_bad_contents.rs  integration_tests.rs  many_good_writes.rs  reset_cache_works.rs
demos/: README.md
demos/nrf52840/: Cargo.toml
demos/nrf52840-load/: Cargo.toml  rust-toolchain.toml
demos/nrf52840-load/.cargo/: config.toml
demos/nrf52840-load/src/: main.rs
demos/nrf52840-load/src/noodle/: alpha.rs  beta.rs  delta.rs  epsilon.rs  gamma.rs  mod.rs
demos/nrf52840/.cargo/: config.toml
demos/nrf52840/src/: main.rs  noodle.rs
notes/: 2025-04-16.md  2025-05-05.md  2025-05-06.md  2025-05-07.md  2025-05-20.md  2025-06-05.md  nor-flash.md
nrf52840/: Cargo.toml
nrf52840/src/: main.rs  noodle.rs
src/: error.rs  flash.rs  hashmap.rs  intrusive.rs  lib.rs  main.rs  safety_guide.rs  storage_list.rs  storage_node.rs  test_utils.rs  worker_task.rs
src/flash/: mod.rs  sequential_storage_backend.rs
src/queue/: mod.rs  sequential_storage_backend.rs
tests/: bad_gc_stress.rs  gc_handles_bad_contents.rs  integration_tests.rs  many_good_writes.rs
