[package]
edition = "2024"
name = "cfg-noodle"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["std"]

[[test]]
name = "integration_tests"
required-features = ["std"]

[features]
default = ["std", "sequential-storage"]
std = [
    "minicbor/std",
    "sequential-storage/std",
    "sequential-storage/_test",
    "tokio/sync",
    "critical-section/std",
    "maitake-sync/std",
    "mutex/std",
    "dep:log",
    "dep:simple_logger",
    "dep:tokio",
]

# "sequential-storage" flash backend, also used for testing
sequential-storage = ["dep:sequential-storage"]

# Log with "defmt"
defmt = ["dep:defmt", "sequential-storage?/defmt-03"]

# Add "arbitrary" dependency, used for fuzzing
arbitrary = ["dep:arbitrary"]

[dependencies]
const-fnv1a-hash = "1.1.0"
embedded-storage-async = "0.4.1"
minicbor = { version = "1.0.0", features = ["derive"] }

cordyceps = "0.3.4"
critical-section = "1.2.0"
maitake-sync = "0.2.1"
mutex = { version = "1.0.0", features = ["impl-critical-section"] }

pin-project = "1.1.10"
thiserror = { version = "2.0.12", default-features = false }

log = { version = "0.4.27", optional = true }
simple_logger = { version = "5.0.0", optional = true }
tokio = { version = "1.45.1", optional = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

sequential-storage = { version = "4.0.1", optional = true }
defmt = { version = "1.0.1", optional = true }
embassy-futures = "0.1.1"

arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
futures = { version = "0.3.31", features = ["executor"] }
futures-test = "0.3.31"
test-log = "0.2.17"
