[package]
edition = "2024"
name = "cfg-noodle"
version = "0.1.0"

[[test]]
name = "integration_tests"
required-features = ["std"]

[features]
default = ["std"]
std = [
    "minicbor/std",
    "sequential-storage/std",
    "sequential-storage/_test",
    "tokio/sync",
    "critical-section/std",
    "maitake-sync/std",
    "mutex/std",
    "dep:log",
    "dep:simple_logger",
    "dep:tokio",
]
defmt = ["dep:defmt", "sequential-storage/defmt-03"]
arbitrary = ["dep:arbitrary"]

[dependencies]
embedded-storage-async = "0.4.1"
minicbor = { version = "1.0.0", default-features = false, features = ["derive"] }
sequential-storage = "4.0.1"

cordyceps = { version = "0.3.4", default-features = false }
critical-section = "1.2.0"
maitake-sync = { version = "0.2.1", default-features = false }
mutex = { version = "1.0.0", features = ["impl-critical-section"] }

pin-project = "1.1.10"

log = { version = "0.4.27", optional = true }
simple_logger = { version = "5.0.0", optional = true }
tokio = { version = "1.45.1", optional = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }

defmt = { version = "1.0.1", optional = true }
embassy-futures = "0.1.1"

arbitrary = { version = "1", optional = true, features = ["derive"] }
crc = "3.3.0"

[dev-dependencies]
approx = "0.5.1"
futures = { version = "0.3.31", features = ["executor"] }
futures-test = "0.3.31"
test-log = "0.2.17"
