[package]
name = "noodle-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-noodle              = { path = "../../crates/cfg-noodle", version = "0.2.0", features = ["defmt"], default-features = false }

cortex-m                = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
embassy-executor        = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf             = { version = "0.3.1", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
# embassy-nrf 0.3.1 uses embassy-sync 0.6.2, so we must use that, too, for now.
embassy-sync            = { version = "0.6.2", features = ["defmt"] }
embassy-time            = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
minicbor                = { version = "1.0.0", features = ["derive"], default-features = false }
mutex                   = { version = "1.0.0", features = ["impl-critical-section"], default-features = false }
panic-probe             = { version = "1.0.0",   features = ["print-defmt"] }
portable-atomic         = { version = "1.11.1", features = ["critical-section"] }

mx25r                   = { git = "https://github.com/jamesmunns/mx25r-rs",   rev = "e45629f497cdc6b917c6a08cb9df0fac3ba33b0a", features = ["defmt"] }

cortex-m-rt             = "0.7.5"
defmt                   = "1.0.1"
defmt-rtt               = "1.0.0"
embassy-embedded-hal    = "0.3.0"
embassy-futures         = "0.1.1"
sequential-storage      = "4.0.3"
static_cell             = "2.1"

[profile.release]
debug = 2
lto = true
opt-level = 's'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
